workEntityをWorkDtoに変更し、server/domain/work/model/workType.tsにworkEntityを作成
